Add and manage artifacts: Add artifacts on documentation

--- a/site/guide/model-validation/add-manage-artifacts.qmd
+++ b/site/guide/model-validation/add-manage-artifacts.qmd
@@ -15,7 +15,7 @@ Add artifacts at the model or documentation section level, update your artifacts
 - [x] {{< var link.login >}}
 - [x] The model is registered in the model inventory.[^1]
 - [x] Model documentation is completed or in progress for your model.[^2]
-- [x] Finding statuses have been set up for use with artifacts.[^3]
+- [x] Artifact statuses have been set up for use with artifacts.[^3]
 - [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^4]
 
 :::
@@ -60,7 +60,7 @@ When linking artifacts to validation reports,[^5] you can add artifacts as you a
 
 7. When you are done, click **Save** to submit the finding.
 
-## Update model artifacts
+## Update artifacts
 
 As artifacts get resolved or require other changes during the model validation process, you can update them:
 
@@ -102,7 +102,7 @@ Uploaded files must be less than 50 MB each in size.
 
 :::
 
-## Delete model artifacts
+## Delete artifacts
 
 ::: {.callout-important title="Finding deletion is permanent."}
 - While finding deletion will be logged under your {{< fa wifi >}} Model Activity,[^10] deleted artifacts cannot be retrieved.
