--- a/site/guide/model-validation/_add-model-findings.qmd
+++ b/site/guide/model-validation/_add-model-findings.qmd
@@ -5,21 +5,21 @@
 
 1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Documentation type file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
-    <!-- Either log a finding on this overview page, or via a specific documentation section. Both methods will allow you to associate a finding with a documentation section.  -->
+    <!-- Either log an artifact on this overview page, or via a specific documentation section. Both methods will allow you to associate an artifact with a documentation section.  -->
 
-1. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
+1. On your model's Documentation page, click **{{< fa square-plus >}} Add Model Artifact**.
 
-1. Select the finding type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] you want to add:
+1. Select the artifact type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] you want to add:
 
    - Validation Issue
    - Policy Exception
    - Model Limitation
 
-1. On the Add Model Finding modal that opens, provide information for your finding.
+1. On the modal that opens, provide information for your artifact.
 
-1. When you are done, click **Save** to submit the finding.
+1. When you are done, click **Save** to submit the artifact.
 
-   Once created, you can then add supporting documentation to your finding.^[[Manage supporting documentation](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation)]
+   Once created, you can then add supporting documentation to your artifact.^[[Manage supporting documentation](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation)]
 
 ::::
 
@@ -30,21 +30,21 @@
 
 1. In the left sidebar that appears for your model, click **Documentation** under {{< fa file >}} Documents.
 
-    <!-- Either log a finding on this overview page, or via a specific documentation section. Both methods will allow you to associate a finding with a documentation section.  -->
+    <!-- Either log an artifact on this overview page, or via a specific documentation section. Both methods will allow you to associate an artifact with a documentation section.  -->
 
 1. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
 
-1. Select the [finding type](/guide/model-validation/manage-finding-types.qmd){target="_blank"} you want to add:
+1. Select the [artifact type](/guide/model-validation/manage-finding-types.qmd){target="_blank"} you want to add:
 
    - Validation Issue
    - Policy Exception
    - Model Limitation
 
-1. On the Add Model Finding modal that opens, provide information for your finding.
+1. On the Add Model Finding modal that opens, provide information for your artifact.
 
-1. When you are done, click **Save** to submit the finding. 
+1. When you are done, click **Save** to submit the artifact. 
 
-   Once created, you can then [add supporting documentation to your finding](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation){target="_blank"}.
+   Once created, you can then [add supporting documentation to your artifact](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation){target="_blank"}.
 
 ::::
 
