--- a/site/guide/model-validation/add-manage-artifacts.qmd
+++ b/site/guide/model-validation/add-manage-artifacts.qmd
@@ -22,7 +22,7 @@ Add artifacts at the model or documentation section level, update your artifacts
 
 ## Add artifacts on documentation
 
-{{< include _add-model-findings.qmd >}}
+{{< include _add-artifacts-on-documentation.qmd >}}
 
 <!-- ADD FINDINGS VIA SECTION CURRENTLY DISABLED, DOCS REMOVAL REQUESTED BY ANDRES -->
 
