Add and manage artifacts: Add artifacts on validation reports

--- a/site/guide/model-validation/add-manage-artifacts.qmd
+++ b/site/guide/model-validation/add-manage-artifacts.qmd
@@ -24,7 +24,7 @@ Add artifacts at the model or documentation section level, update your artifacts
 
 {{< include _add-artifacts-on-documentation.qmd >}}
 
-<!-- ADD FINDINGS VIA SECTION CURRENTLY DISABLED, DOCS REMOVAL REQUESTED BY ANDRES -->
+<!-- ADD FINDINGS VIA SECTION CURRENTLY DISABLED, DOCS REMOVAL REQUESTED BY ANDRES // RENAME EMBEDS TO ARTIFACTS IF REUSED -->
 
 <!-- ::: {.panel-tabset}
 
@@ -48,17 +48,17 @@ When linking artifacts to validation reports,[^5] you can add artifacts as you a
 
 3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.[^7]
 
-4. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report** and select the finding type[^8] you want to add:
+4. In any section of the report where the button is available, click **{{< fa link >}} Link Artifact to Report** and select the artifact type[^8] you want to add:
 
    - Validation Issue
    - Policy Exception
    - Model Limitation
 
-5. On the Link Finding to Report modal that opens, click **{{< fa plus >}} Add {x} Finding** where `{x}` is the type of finding.
+5. On the Link Artifact to Report modal that opens, click **{{< fa plus >}} Add {x}** where `{x}` is the type of artifact.
 
-6. On the Add Model Finding modal that opens, provide information for your finding.
+6. On the modal that opens, provide information for your artifact.
 
-7. When you are done, click **Save** to submit the finding.
+7. When you are done, click **Add {x}** where `{x}` is the type of artifact to submit the artifact.
 
 ## Update artifacts
 
