--- a/site/guide/model-validation/add-manage-artifacts.qmd
+++ b/site/guide/model-validation/add-manage-artifacts.qmd
@@ -54,24 +54,24 @@ When linking artifacts to validation reports,[^5] you can add artifacts as you a
    - Policy Exception
    - Model Limitation
 
-5. On the Link Artifact to Report modal that opens, click **{{< fa plus >}} Add {x}** where `{x}` is the type of artifact.
+5. On the Link Artifact to Report modal that opens, click **{{< fa plus >}} Add {Artifact Type}**.
 
 6. On the modal that opens, provide information for your artifact.
 
-7. When you are done, click **Add {x}** where `{x}` is the type of artifact to submit the artifact.
+7. When you are done, click **Add {Artifact Type}** to submit the artifact.
 
 ## Update artifacts
 
 As artifacts get resolved or require other changes during the model validation process, you can update them:
 
-1. Locate the finding you want to update.[^9]
+1. Locate the artifact you want to update.[^9]
 
 2. Click on a field to make changes.
 
-   You can also add comments to a finding.
+   You can also add comments to an artifact.
 
-::: {.callout}
-Most updates are applied immediately but you must click **Save** to make changes to the finding title, description, proposed remediation plan, and attachments effective.
+::: {.callout-important}
+Most updates are applied immediately but you must click **Save** to make changes to the artifact title, description, proposed remediation plan, and attachments effective.
 :::
 
 ### Track issue resolution
@@ -104,19 +104,19 @@ Uploaded files must be less than 50 MB each in size.
 
 ## Delete artifacts
 
-::: {.callout-important title="Finding deletion is permanent."}
-- While finding deletion will be logged under your {{< fa wifi >}} Model Activity,[^10] deleted artifacts cannot be retrieved.
-- Deleting a finding will also remove it from any validation reports[^11] it was previously attached to.
+::: {.callout-important title="Artifact deletion is permanent."}
+- While artifact deletion will be logged under your {{< fa wifi >}} Model Activity,[^10] deleted artifacts cannot be retrieved.
+- Deleting an artifact will also remove it from any validation reports[^11] it was previously attached to.
 
 :::
 
-If you logged a finding in error or otherwise no longer need to track that finding, you can delete it:
+If you logged an artifact in error or otherwise no longer need to track that artifact, you can delete it:
 
-1. Locate the finding you want to delete.[^12]
+1. Locate the artifact you want to delete.[^12]
 
-2. On the finding's detail page, click **{{< fa trash-can>}} Delete {Finding Type}**[^13] in the right sidebar.
+2. On the artifact's detail page, click **{{< fa trash-can>}} Delete {Artifact Type}**[^13] in the right sidebar.
 
-3. After you confirm, the finding will be permanently deleted.
+3. After you confirm, the artifact will be permanently deleted.
 
 
 <!-- FOOTNOTES -->
