Add and manage artifacts: Update artifacts - Track artifact resolution

--- a/site/guide/model-validation/add-manage-artifacts.qmd
+++ b/site/guide/model-validation/add-manage-artifacts.qmd
@@ -74,9 +74,9 @@ As artifacts get resolved or require other changes during the model validation p
 Most updates are applied immediately but you must click **Save** to make changes to the artifact title, description, proposed remediation plan, and attachments effective.
 :::
 
-### Track issue resolution
+### Track artifact resolution
 
-{{< include _track-issue-resolution.qmd >}}
+{{< include _track-artifact-resolution.qmd >}}
 
 ### Manage supporting documentation
 
