--- a/site/guide/model-validation/customize-artifact-layouts.qmd
+++ b/site/guide/model-validation/customize-artifact-layouts.qmd
@@ -99,6 +99,11 @@ To modify a saved view for all other artifact types:
 
 1. In the left sidebar, click **{{< fa border-all >}} Artifacts** for lists of other artifact types across all models.
 
+2. Select an artifact type[^9] for a list of that artifact type:
+
+   - Policy Exception
+   - Model Limitation
+
 {{< include /guide/model-inventory/_remove-layout-view.qmd >}}
 
 :::
@@ -121,3 +126,5 @@ To modify a saved view for all other artifact types:
 [^7]: [Manage custom artifact views](#manage-custom-artifact-views)
 
 [^8]: [Filter and sort artifacts](view-filter-artifacts.qmd#filter-and-sort-artifacts)
+
+[^9]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
