--- a/site/guide/model-validation/add-manage-artifacts.qmd
+++ b/site/guide/model-validation/add-manage-artifacts.qmd
@@ -80,7 +80,7 @@ Most updates are applied immediately but you must click **Save** to make changes
 
 ### Manage supporting documentation
 
-After a finding is created, you're able to add supporting documentation to it.
+After an artifact is created, you're able to add supporting documentation to it.
 
 ::: {.panel-tabset}
 
