Edit: Customize artifact overview page

--- a/site/guide/model-validation/customize-artifact-overview-page.qmd
+++ b/site/guide/model-validation/customize-artifact-overview-page.qmd
@@ -5,7 +5,7 @@ aliases:
   - customize-finding-overview-page.html
 ---
 
-Configure what and how finding fields appear when you pull up artifacts logged on models.
+Configure what and how artifact fields appear when you pull up artifacts logged on models.
 
 :::{.callout title="Changes are automatically saved to your account and do not affect other users."}
 Customizations will apply to all artifacts in your inventory.
@@ -24,17 +24,17 @@ Customizations will apply to all artifacts in your inventory.
 
 ## Show or hide fields
 
-::: {.callout title="Only custom finding fields can be shown or hidden."}
-Default fields will always appear on your finding overview pages and are represented by by faded cells. Their positions cannot be adjusted.
+::: {.callout title="Only custom artifact fields can be shown or hidden."}
+Default fields will always appear on your artifact overview pages and are represented by by faded cells. Their positions cannot be adjusted.
 :::
 
-1. Open a finding logged on any model.[^3]
+1. Open an artifact logged on any model.[^3]
 
 2. Click on **{{< fa table-cells-large >}} Customize Layout**.
 
-3. On the Customize Section Layout modal that appears, configure the finding fields[^4] that appear:
+3. On the Customize Section Layout modal that appears, configure the artifact fields[^4] that appear:
 
-   - Toggle optional finding fields or field groups on or off to show or hide them from view.
+   - Toggle optional artifact fields or field groups on or off to show or hide them from view.
    - Click and hold a field or field group to drag-and-drop to rearrange the order of fields and field groups. Fields and field groups can be moved from the Side Column to the Main Column and vice versa.[^5]
 
    To narrow down your list of fields, search via the **{{< fa filter >}} Filter** bar.
