Manage finding types > Manage artifact types*

--- a/site/guide/model-validation/_add-artifacts-on-documentation.qmd
+++ b/site/guide/model-validation/_add-artifacts-on-documentation.qmd
@@ -9,7 +9,7 @@
 
 1. On your model's Documentation page, click **{{< fa square-plus >}} Add Model Artifact**.
 
-1. Select the artifact type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] you want to add:
+1. Select the artifact type^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)] you want to add:
 
    - Validation Issue
    - Policy Exception
@@ -34,7 +34,7 @@
 
 1. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
 
-1. Select the [artifact type](/guide/model-validation/manage-finding-types.qmd){target="_blank"} you want to add:
+1. Select the [artifact type](/guide/model-validation/manage-artifact-types.qmd){target="_blank"} you want to add:
 
    - Validation Issue
    - Policy Exception
