--- a/site/guide/model-validation/_add-edit-finding-fields.qmd
+++ b/site/guide/model-validation/_add-edit-finding-fields.qmd
@@ -6,7 +6,7 @@
 
 To add a new finding field, click **{{< fa plus >}} Add Field**:
 
-a. Finding fields require a **[type]{.smallcaps}**,^[[Finding field types](/guide/model-validation/manage-model-finding-fields.qmd#finding-field-types)] a **[name]{.smallcaps}**, and a **[finding type]{.smallcaps}**.^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)]
+a. Finding fields require a **[type]{.smallcaps}**,^[[Finding field types](/guide/model-validation/manage-model-finding-fields.qmd#finding-field-types)] a **[name]{.smallcaps}**, and a **[finding type]{.smallcaps}**.^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)]
 
     - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
     - (Optional) You can also choose to indicate that a field is **[required when creating findings]{.smallcaps}**.
