--- a/site/guide/model-validation/_link-findings-to-reports.qmd
+++ b/site/guide/model-validation/_link-findings-to-reports.qmd
@@ -9,7 +9,7 @@
 
    For example, locate 2. Validation then select **2.1.1. Assumptions**.
 
-1. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report** and select the finding type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] you want to add:
+1. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report** and select the finding type^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)] you want to add:
 
    - Validation Issue
    - Policy Exception
@@ -37,7 +37,7 @@
 
     ![Validation report with the link finding option highlighted](/notebooks/tutorials/model_validation/link-finding.png){width=90% fig-alt="Screenshot showing the validation report with the link finding option highlighted" .screenshot}
 
-1. Select **Validation Issue** as the [type of finding](/guide/model-validation/manage-finding-types.qmd){target="_blank"}.
+1. Select **Validation Issue** as the [type of finding](/guide/model-validation/manage-artifact-types.qmd){target="_blank"}.
 
 1. Click **{{< fa plus >}} Add Validation Issue Finding** to add a finding.
 
