--- a/site/guide/model-validation/_track-artifact-resolution.qmd
+++ b/site/guide/model-validation/_track-artifact-resolution.qmd
@@ -29,7 +29,7 @@ a. Track open issues until all validation issues are resolved or a remediation p
 
 a. In the left sidebar that appears for your model, click **{{< fa border-all >}} Artifacts** to view lists of other artifact types associated with that model.
 
-a.  Select an artifact type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] for a list of that artifact type:
+a.  Select an artifact type^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)] for a list of that artifact type:
 
     - Policy Exception
     - Model Limitation
@@ -79,7 +79,7 @@ a. Track open issues until all validation issues are resolved or a remediation p
 
 a. In the left sidebar that appears for your model, click **{{< fa border-all >}} Artifacts** to view lists of other artifact types associated with that model.
 
-a.  Select an [artifact type](/guide/model-validation/manage-finding-types.qmd){target="_blank"} for a list of that artifact type:
+a.  Select an [artifact type](/guide/model-validation/manage-artifact-types.qmd){target="_blank"} for a list of that artifact type:
 
     - Policy Exception
     - Model Limitation
