--- a/site/guide/model-validation/_view-all-artifacts.qmd
+++ b/site/guide/model-validation/_view-all-artifacts.qmd
@@ -24,7 +24,7 @@ In the left sidebar, click **{{< fa triangle-exclamation >}} Validation Issues**
 
 1. In the left sidebar, click **{{< fa border-all >}} Artifacts** to view lists of other artifact types across all models.
 
-1. Select an artifact type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] to view from the tabs:
+1. Select an artifact type^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)] to view from the tabs:
 
    - Policy Exception
    - Model Limitation
@@ -68,7 +68,7 @@ To view lists of other artifact types across all models:
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
 
-1. Select a [finding type](/guide/model-validation/manage-finding-types.qmd){target="_blank"} to view from the tabs:
+1. Select a [finding type](/guide/model-validation/manage-artifact-types.qmd){target="_blank"} to view from the tabs:
 
    - Policy Exception
    - Model Limitation
