--- a/site/guide/model-validation/add-manage-artifacts.qmd
+++ b/site/guide/model-validation/add-manage-artifacts.qmd
@@ -125,7 +125,7 @@ If you logged an artifact in error or otherwise no longer need to track that art
 
 [^2]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
-[^3]: [Manage finding types](manage-finding-types.qmd#manage-finding-type-statuses)
+[^3]: [Manage artifact types](manage-artifact-types.qmd#manage-finding-type-statuses)
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
@@ -135,7 +135,7 @@ If you logged an artifact in error or otherwise no longer need to track that art
 
 [^7]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^8]: [Manage finding types](manage-finding-types.qmd)
+[^8]: [Manage artifact types](manage-artifact-types.qmd)
 
 [^9]: [View and filter artifacts](view-filter-artifacts.qmd)
 
@@ -145,4 +145,4 @@ If you logged an artifact in error or otherwise no longer need to track that art
 
 [^12]: [View and filter artifacts](view-filter-artifacts.qmd)
 
-[^13]: [Manage finding types](manage-finding-types.qmd)
+[^13]: [Manage artifact types](manage-artifact-types.qmd)
