--- a/site/guide/model-validation/customize-artifact-layouts.qmd
+++ b/site/guide/model-validation/customize-artifact-layouts.qmd
@@ -119,7 +119,7 @@ To modify a saved view for all other artifact types:
 
 [^4]: [Manage custom artifact views](#manage-custom-artifact-views)
 
-[^5]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
+[^5]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
 
 [^6]: [Manage model finding fields](manage-model-finding-fields.qmd)
 
@@ -127,4 +127,4 @@ To modify a saved view for all other artifact types:
 
 [^8]: [Filter and sort artifacts](view-filter-artifacts.qmd#filter-and-sort-artifacts)
 
-[^9]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
+[^9]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
