--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -189,6 +189,6 @@ To group finding fields, first create a finding field group:
 
 [^7]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^8]: [Manage finding types](manage-finding-types.qmd)
+[^8]: [Manage artifact types](manage-artifact-types.qmd)
 
 [^9]: [Add or edit finding fields](#add-or-edit-finding-fields)
