--- a/site/guide/model-validation/managing-model-validation.qmd
+++ b/site/guide/model-validation/managing-model-validation.qmd
@@ -10,7 +10,7 @@ listing:
     fields: [title, description]
     contents:
     - manage-validation-guidelines.qmd
-    - manage-finding-types.qmd
+    - manage-artifact-types.qmd
     - manage-finding-severities.qmd
     - manage-model-finding-fields.qmd
 ---
