--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -124,27 +124,27 @@ Filters can be removed by clicking on the {{< fa xmark >}} next to them on the m
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
+[^4]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
 
 [^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
 [^6]: [Manage supporting documentation](add-manage-artifacts.qmd#manage-supporting-documentation)
 
-[^7]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
+[^7]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
 
 [^8]:
 
-   - [**[status]{.smallcaps}**](/guide/model-validation/manage-finding-types.qmd#manage-finding-type-statuses)
+   - [**[status]{.smallcaps}**](/guide/model-validation/manage-artifact-types.qmd#manage-finding-type-statuses)
    - [**[model inventory]{.smallcaps}**](/guide/model-inventory/working-with-model-inventory.qmd)
    - [**[risk area]{.smallcaps}**](/guide/model-validation/manage-validation-guidelines.qmd#set-up-validation-guidelines)
    - [**[business units]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
    - **[severity]{.smallcaps}**
    - **[assignee]{.smallcaps}**
 
-[^9]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
+[^9]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
 
 [^10]:
 
-   - [**[status]{.smallcaps}**](/guide/model-validation/manage-finding-types.qmd#manage-finding-type-statuses)
+   - [**[status]{.smallcaps}**](/guide/model-validation/manage-artifact-types.qmd#manage-finding-type-statuses)
    - [**[model inventory]{.smallcaps}**](/guide/model-inventory/working-with-model-inventory.qmd)
    - [**[business units]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
