--- a/site/guide/reporting/export-findings.qmd
+++ b/site/guide/reporting/export-findings.qmd
@@ -41,7 +41,7 @@ Export tracked model findings as comma-delimited tables (`.csv`).
 
 [^2]: [Add and manage artifacts](/guide/model-validation/add-manage-artifacts.qmd)
 
-[^3]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
+[^3]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
 
 [^4]: [View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts)
 
