--- a/site/guide/workflows/_add-new-workflows.qmd
+++ b/site/guide/workflows/_add-new-workflows.qmd
@@ -40,7 +40,7 @@ a. Under **[workflow start]{.smallcaps}**, select when the workflow should be in
     - **Manually** — Start this workflow manually.^[[Initiate workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
     - **On Finding Registration** — Start this workflow when a finding is logged on a model.[^on-finding-registration]
 
-a. Select the **[finding type]{.smallcaps}**^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] this workflow applies to.
+a. Select the **[finding type]{.smallcaps}**^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)] this workflow applies to.
 
 a. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
 
