--- a/site/guide/model-validation/manage-artifact-types.qmd
+++ b/site/guide/model-validation/manage-artifact-types.qmd
@@ -1,8 +1,9 @@
 ---
-title: "Manage finding types"
+title: "Manage artifact types"
 date: last-modified
 aliases: 
   - manage-finding-statuses.html
+  - manage-finding-types.html
 ---
 
 Prepare to track the progress and resolution of findings by customizing finding types and their associated statuses available to be logged on models in your inventory.
