--- a/site/guide/reporting/working-with-analytics.qmd
+++ b/site/guide/reporting/working-with-analytics.qmd
@@ -141,7 +141,7 @@ Rearrange report widgets on your analytics pages, including your custom pages:[^
 
 [^5]: [Manage model stages](/guide/workflows/manage-model-stages.qmd)
 
-[^6]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd#available-finding-types)
+[^6]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd#available-finding-types)
 
 [^7]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd#manage-widgets)
 
