Manage finding severities > Manage artifact severities

--- a/site/guide/model-validation/manage-artifact-severities.qmd
+++ b/site/guide/model-validation/manage-artifact-severities.qmd
@@ -1,6 +1,8 @@
 ---
-title: "Manage finding severities"
+title: "Manage artifact severities"
 date: last-modified
+aliases: 
+  - manage-finding-severities.html
 ---
 
 {{< include /guide/model-validation/_finding-severities.qmd >}}
