Manage model finding fields > Manage artifact fields

--- a/site/guide/model-validation/customize-artifact-layouts.qmd
+++ b/site/guide/model-validation/customize-artifact-layouts.qmd
@@ -115,13 +115,13 @@ To modify a saved view for all other artifact types:
 
 [^2]: [Add and manage artifacts](add-manage-artifacts.qmd)
 
-[^3]: [Manage model finding fields](manage-model-finding-fields.qmd)
+[^3]: [Manage artifact fields](manage-artifact-fields.qmd)
 
 [^4]: [Manage custom artifact views](#manage-custom-artifact-views)
 
 [^5]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
 
-[^6]: [Manage model finding fields](manage-model-finding-fields.qmd)
+[^6]: [Manage artifact fields](manage-artifact-fields.qmd)
 
 [^7]: [Manage custom artifact views](#manage-custom-artifact-views)
 
