--- a/site/guide/model-validation/customize-artifact-overview-page.qmd
+++ b/site/guide/model-validation/customize-artifact-overview-page.qmd
@@ -50,6 +50,6 @@ Default fields will always appear on your artifact overview pages and are repres
 
 [^3]: [View and filter artifacts](view-filter-artifacts.qmd)
 
-[^4]: [Manage model finding fields](/guide/model-validation/manage-model-finding-fields.qmd#finding-field-types)
+[^4]: [Manage artifact fields](/guide/model-validation/manage-artifact-fields.qmd#finding-field-types)
 
 [^5]: `Attachments` or `Long Text` type fields can only be placed in the Main Column.
