--- a/site/guide/model-validation/manage-artifact-fields.qmd
+++ b/site/guide/model-validation/manage-artifact-fields.qmd
@@ -1,6 +1,8 @@
 ---
-title: "Manage model finding fields"
+title: "Manage artifact fields"
 date: last-modified
+aliases: 
+  - manage-model-finding-fields.html
 ---
 
 {{< include /guide/model-validation/_model-finding-fields.qmd >}}
