--- a/site/guide/model-validation/manage-artifact-types.qmd
+++ b/site/guide/model-validation/manage-artifact-types.qmd
@@ -92,7 +92,7 @@ Findings statuses cannot be deleted if in use on a finding. Ensure that the stat
 [^3]:
 
     ::: {.callout title="Only default fields are available to be selected in this view."}
-    To further customize fields displayed on finding types, refer to: [Manage model finding fields](manage-model-finding-fields.qmd)
+    To further customize fields displayed on finding types, refer to: [Manage artifact fields](manage-artifact-fields.qmd)
 
     :::
 
