--- a/site/guide/model-validation/managing-model-validation.qmd
+++ b/site/guide/model-validation/managing-model-validation.qmd
@@ -12,7 +12,7 @@ listing:
     - manage-validation-guidelines.qmd
     - manage-artifact-types.qmd
     - manage-artifact-severities.qmd
-    - manage-model-finding-fields.qmd
+    - manage-artifact-fields.qmd
 ---
 
 Enable your organization to use the {{< var validmind.platform >}} for validation by setting up guidelines for validation reports and configuring options for findings to align with your organization's requirements.
