Edit: Manage artifact types

--- a/site/guide/model-validation/managing-model-validation.qmd
+++ b/site/guide/model-validation/managing-model-validation.qmd
@@ -15,7 +15,7 @@ listing:
     - manage-artifact-fields.qmd
 ---
 
-Enable your organization to use the {{< var validmind.platform >}} for validation by setting up guidelines for validation reports and configuring options for findings to align with your organization's requirements.
+Enable your organization to use the {{< var validmind.platform >}} for validation by setting up guidelines for validation reports and configuring options for artifacts to align with your organization's requirements.
 
 :::{#validation}
 :::
