--- a/site/guide/model-validation/_reorder-artifact-severities.qmd
+++ b/site/guide/model-validation/_reorder-artifact-severities.qmd
@@ -1,10 +1,10 @@
-Finding severities range from most severe at the top to least severe at the bottom.
+Artifact severities range from most severe at the top to least severe at the bottom.
 
 To reorder severities:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Findings, select **Finding Severities**.
+1. Under Artifacts, select **Artifact Severities**.
 
 1. Click and hold to drag a severity up or down.
 
