--- a/site/guide/model-validation/manage-artifact-severities.qmd
+++ b/site/guide/model-validation/manage-artifact-severities.qmd
@@ -5,7 +5,7 @@ aliases:
   - manage-finding-severities.html
 ---
 
-{{< include /guide/model-validation/_finding-severities.qmd >}}
+{{< include /guide/model-validation/_artifact-severities.qmd >}}
 
 ::: {.attn}
 
@@ -16,15 +16,15 @@ aliases:
 
 :::
 
-## Add finding severities
+## Add artifact severities
 
-{{< include /guide/model-validation/_add-finding-severities.qmd >}}
+{{< include /guide/model-validation/_add-artifact-severities.qmd >}}
 
-## Edit finding severities
+## Edit artifact severities
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Findings, select **Finding Severities**.
+2. Under Artifacts, select **Artifact Severities**.
 
 3. Hover over the severity you would like to edit.
 
@@ -35,20 +35,20 @@ aliases:
 6. Click **Update Severity** to apply your edits.
 
 
-## Reorder finding severities
+## Reorder artifact severities
 
-{{< include /guide/model-validation/_reorder-finding-severities.qmd >}}
+{{< include /guide/model-validation/_reorder-artifact-severities.qmd >}}
 
-## Remove finding severities
+## Remove artifact severities
 
-::: {.callout-important title="Removal of finding severities is permanent."}
-Severities can only be deleted if they are not in use by any findings.
+::: {.callout-important title="Removal of artifact severities is permanent."}
+Severities can only be deleted if they are not in use by any artifacts.
 
 :::
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Findings, select **Finding Severities**.
+2. Under Artifacts, select **Artifact Severities**.
 
 3. Hover over the severity you would like to delete.
 
