--- a/site/guide/model-validation/manage-artifact-fields.qmd
+++ b/site/guide/model-validation/manage-artifact-fields.qmd
@@ -37,7 +37,7 @@ aliases:
 
 #### Search fields
 
-a. Click **{{< fa magnifying-glass >}} Search** to search by keywords within a artifacts field.
+a. Click **{{< fa magnifying-glass >}} Search** to search by keywords within an artifacts field.
 
 b. Select whether to search in the **Title** or **Description**.
 
@@ -146,7 +146,7 @@ else:
 
 ## Add artifact field groups
 
-To group artifact fields, first create a artifact field group:
+To group artifact fields, first create an artifact field group:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
