--- a/site/guide/model-validation/manage-artifact-types.qmd
+++ b/site/guide/model-validation/manage-artifact-types.qmd
@@ -77,7 +77,7 @@ b. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select:
 
 ::: {.callout-important title="Artifact status deletion is permanent and cannot be undone."}
 
-Artifact statuses cannot be deleted if in use on a artifact. Ensure that the status you're deleting is not associated with any artifacts before proceeding.
+Artifact statuses cannot be deleted if in use on an artifact. Ensure that the status you're deleting is not associated with any artifacts before proceeding.
 :::
 
 :::
