--- a/site/guide/model-validation/customize-artifact-layouts.qmd
+++ b/site/guide/model-validation/customize-artifact-layouts.qmd
@@ -71,7 +71,7 @@ Saved views are unique to you and do not display for other users in your organiz
 
 You can save custom artifact configurations as a view to reapply at any time for each artifact type:
 
-1. First, customize a artifact layout.[^6]
+1. First, customize an artifact layout.[^6]
 
    You can also apply filters or sorting before saving your view to include them in the view.[^8]
 
