--- a/site/guide/model-validation/_track-artifact-resolution.qmd
+++ b/site/guide/model-validation/_track-artifact-resolution.qmd
@@ -1,5 +1,5 @@
 :::: {.content-visible unless-format="revealjs"}
-As you prepare your validation report, review open or past due model artifacts, close resolved ones, or add a mitigation plan:
+As you prepare your validation report, review open or past due artifacts, close resolved ones, or add a mitigation plan:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
