--- a/site/guide/model-validation/customize-artifact-layouts.qmd
+++ b/site/guide/model-validation/customize-artifact-layouts.qmd
@@ -5,7 +5,7 @@ aliases:
   - customize-model-findings-layouts.qmd
 ---
 
-Configure the information that displays by default on the list of all tracked model artifacts for each artifact type.
+Configure the information that displays by default on the list of all tracked artifacts for each artifact type.
 
 ::: {.attn}
 
