--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -162,7 +162,7 @@ Integrate the {{< var validmind.developer >}} with other development platforms t
 
 ### Service integrations
 
-Link to tickets in external systems and keep them synchronized. Attach tickets to {{< var vm.product >}} artifacts, such as model artifacts, to support coordinated tracking across your validation workflow and external project or issue management tools.
+Link to tickets in external systems and keep them synchronized. Attach tickets to {{< var vm.product >}} artifacts, such as validation issues, to support coordinated tracking across your validation workflow and external project or issue management tools.
 
 **Supported**
 
