Model artifacts in FAQ**

--- a/site/faq/faq-privacy.qmd
+++ b/site/faq/faq-privacy.qmd
@@ -25,9 +25,9 @@ categories: ["data handling", "privacy", "confidentiality", "model activity", "a
 
 Access to the {{< var validmind.platform >}} is facilitated through AWS PrivateLink, which provides private connectivity between {{< var vm.product >}} and your on-premises networks without exposing your traffic to the public internet.[^2]
 
-## What model artifacts are automatically imported into {{< var vm.product >}}?
+## What model assets are automatically imported into {{< var vm.product >}}?
 
-{{< var vm.product >}} stores the following artifacts in the documentation via our {{< var validmind.api >}}:
+{{< var vm.product >}} stores the following assets in the documentation via our {{< var validmind.api >}}:
 
 - Dataset and model metadata which allow generating documentation snippets programmatically (example: stored definition for "common logistic regression limitations" when a logistic regression model has been passed to the {{< var vm.product >}} test suite execution)
 - Quality and performance metrics collected from the dataset and model
