--- a/site/about/fine-print/data-privacy-policy.qmd
+++ b/site/about/fine-print/data-privacy-policy.qmd
@@ -61,11 +61,11 @@ The {{< var validmind.vpv >}} option provides all our features and services but 
 
 Access is available through AWS PrivateLink, Azure Private Link, or GCP Private Service Connect, all of which provide private connectivity between {{< var vm.product >}} and your on-premises network without exposing your traffic to the public internet. 
 
-## What model artifacts are imported into documentation?
+## What model assets are imported into documentation?
 
-When you generate documentation or run tests, {{< var vm.product >}} imports the following artifacts into the documentation via our {{< var validmind.api >}} endpoint integration:
+When you generate documentation or run tests, {{< var vm.product >}} imports the following assets into the documentation via our {{< var validmind.api >}} endpoint integration:
 
-![Artifacts imported into the documentation via our {{< var vm.api >}}](overview-api-integration.jpg){width=80% fig-alt="A representation of artifacts imported into the documentation via our Python API"}
+![Artifacts imported into the documentation via our {{< var vm.api >}}](overview-api-integration.jpg){width=80% fig-alt="A representation of assets imported into the documentation via our Python API"}
 
 - Metadata about datasets and models, used to look up programmatic documentation content, such as the stored definition for _common logistic regression limitations_ when a logistic regression model has been passed to the {{< var vm.product >}} test suite to be run.
 - Quality and performance metrics collected from datasets and models.
