Edit: Export artifacts

--- a/site/guide/model-validation/_view-all-artifacts.qmd
+++ b/site/guide/model-validation/_view-all-artifacts.qmd
@@ -5,7 +5,7 @@
 
 In the left sidebar, click **{{< fa triangle-exclamation >}} Validation Issues** to view a list of validation issues across all models:
 
-- Filter this list to include only artifacts you want to see,^[[Filter and sort artifacts](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts)] or toggle visibilty for column headers.^[[Customize artifact layouts](/guide/model-validation/customize-artifact-layouts.qmd)]
+- Filter this list to include only validation issues you want to see,^[[Filter and sort artifacts](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts)] or toggle visibilty for column headers.^[[Customize artifact layouts](/guide/model-validation/customize-artifact-layouts.qmd)]
 
 - Click on any validation issue for more information, including the proposed remediation plan and any supporting attachments.^[[Manage supporting documentation](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation)]
 
@@ -47,7 +47,7 @@ To view a list of validation issues across all models:
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
 
-    [Filter this list](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts){target="_blank"} to include only artifacts you want to see, or [toggle visibilty for column headers](/guide/model-validation/customize-artifact-layouts.qmd){target="_blank"}.
+    [Filter this list](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts){target="_blank"} to include only validation issues you want to see, or [toggle visibilty for column headers](/guide/model-validation/customize-artifact-layouts.qmd){target="_blank"}.
 
 1. Click on any validation issue for more information, including the proposed remediation plan and [any supporting attachments](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation){target="_blank"}.
 
