--- a/site/guide/model-validation/customize-artifact-layouts.qmd
+++ b/site/guide/model-validation/customize-artifact-layouts.qmd
@@ -35,7 +35,7 @@ Customize what is displayed on your list of all artifacts for each artifact type
 
    - Search for a column name in the list to narrow down results.
    - Toggle visibility for each item and drag each option to change the order.
-   - Available columns are determined by your artifact fields.[^3]
+   - Available columns are determined by your validation issue fields.[^3]
 
 Once customized, you can save a view for later application.[^4]
 
