--- a/site/guide/reporting/generating-exports.qmd
+++ b/site/guide/reporting/generating-exports.qmd
@@ -11,7 +11,7 @@ listing:
     contents:
       - export-inventory.qmd
       - export-documents.qmd
-      - export-findings.qmd
+      - export-artifacts.qmd
 ---
 
 Export your documents, model inventory, and findings for use outside of the {{< var validmind.platform >}}.
