--- a/site/about/glossary/validation_reports/_artifacts.qmd
+++ b/site/about/glossary/validation_reports/_artifacts.qmd
@@ -1,2 +1,2 @@
-findings
+artifacts (findings)
 : Observations or issues identified during model validation, including any deviations from expected performance or standards.
