Edit: Review model documentation

--- a/site/guide/model-documentation/_document-overview.qmd
+++ b/site/guide/model-documentation/_document-overview.qmd
@@ -2,7 +2,7 @@
 The **Document Overview** shows a section-by-section outline of your model's documentation, as well as summaries of:
       
 - Any unresolved conversations^[[Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)]
-- The number of model findings^[[Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)]
+- The number of model artifacts^[[Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)]
 - The completion status for your model's documentation^[[Assign section statuses](/guide/model-documentation/assign-documentation-section-statuses.qmd)]
 - Recent activity on your model^[[View model activity](/guide/model-inventory/view-model-activity.qmd)]
 
@@ -12,7 +12,7 @@ The **Document Overview** shows a section-by-section outline of your model's doc
 The **Document Overview** shows a section-by-section outline of your model's documentation, as well as summaries of:
 
 - Any unresolved conversations
-- The number of model findings
+- The number of model artifacts
 - The completion status for your model's documentation
 - Recent activity on your model
    
