--- a/site/guide/model-validation/review-model-documentation.qmd
+++ b/site/guide/model-validation/review-model-documentation.qmd
@@ -34,10 +34,10 @@ Hover over **{{< fa comment-dots >}} # Unresolved conversations** to see a previ
 
 Resolve conversations directly from this popup, or click to expand the conversation.
 
-#### Model findings
-Hover over **{{< fa triangle-exclamation >}} # Model Findings** to see a preview of model findings associated with the documentation section.
+#### Model artifacts
+Hover over **Model Artifacts {{< fa expand >}} #** to see a preview of model artifacts associated with the documentation section.
 
-Click to expand the finding.
+Click to expand the artifact.
 
 #### Completion status
 The **{{< fa check >}} #/# Done** indicator reflects the completion status of your documentation sections.
