--- a/site/about/glossary/validation_reports/_actions.qmd
+++ b/site/about/glossary/validation_reports/_actions.qmd
@@ -1,2 +1,2 @@
 actions
-: Recommended steps or measures to address findings from model validation or risk assessments.
+: Recommended steps or measures to address artifacts from model validation or risk assessments.
