Edit: Assess compliance

--- a/site/guide/model-validation/add-manage-artifacts.qmd
+++ b/site/guide/model-validation/add-manage-artifacts.qmd
@@ -129,7 +129,7 @@ If you logged an artifact in error or otherwise no longer need to track that art
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^5]: [Link findings to reports](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
+[^5]: [Link artifacts to reports](/guide/model-validation/assess-compliance.qmd#link-artifacts-to-reports)
 
 [^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
@@ -141,7 +141,7 @@ If you logged an artifact in error or otherwise no longer need to track that art
 
 [^10]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
 
-[^11]: [Link findings to reports](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
+[^11]: [Link artifacts to reports](/guide/model-validation/assess-compliance.qmd#link-artifacts-to-reports)
 
 [^12]: [View and filter artifacts](view-filter-artifacts.qmd)
 
