--- a/site/guide/model-validation/assess-compliance.qmd
+++ b/site/guide/model-validation/assess-compliance.qmd
@@ -5,12 +5,12 @@ aliases:
   - /guide/assess-compliance.html
 ---
 
-Use the {{< var validmind.platform >}} to assess compliance of your models with guidelines based on analyzing evidence and findings.
+Use the {{< var validmind.platform >}} to assess compliance of your models with guidelines based on analyzing evidence and artifacts.
 
 Compliance assessments provide an unbiased starting point that enables more efficient discussions between validators and developers and involves three steps:
 
 1. [Link evidence to reports](#link-evidence-to-reports)
-2. [Link findings to reports](#link-findings-to-reports)
+2. [Link artifacts to reports](#link-artifacts-to-reports)
 3. [Provide compliance assessments](#provide-compliance-assessments)
 
 ::: {.attn}
@@ -38,11 +38,7 @@ To link evidence logged by developers^[[{{< var validmind.developer >}}](/develo
 
    Expand any subsection of the validation report you would like to work with.
 
-   For example, locate 2. Validation then select **2.1.1. Assumptions**.
-
 4. In any section of the report where the button is available, click **{{< fa link >}} Link Developer Evidence**. 
-
-   ![Validation report section 2.1.1. that shows a compliance assessment with the option to link to developer evidence](link-developer-evidence.png){fig-alt="A screenshot of the validation report section 2.1.1. that shows a compliance assessment with the option to link to developer evidence" .screenshot}
 
 5. On the **Link Developer Evidence to Validation Report** page that opens, select the evidence that is related to your assessment. 
    
@@ -58,9 +54,9 @@ To link evidence logged by developers^[[{{< var validmind.developer >}}](/develo
 
 {{< include _link-validator-evidence.qmd >}}
 
-## Link findings to reports
+## Link artifacts to reports
 
-{{< include _link-findings-to-reports.qmd >}}
+{{< include _link-artifacts-to-reports.qmd >}}
 
 ## Provide compliance assessments
 
